--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -180,7 +180,7 @@ jobs:
 
     - name: 上传.config配置文件在 github actions
       uses: actions/upload-artifact@v2
-      if: steps.organizer.outputs.status == 'success' && env.UPLOAD_CONFIG == 'true'
+      if: env.UPLOAD_CONFIG == 'true'
       with:
         name: .config_${{ env.CODE }}_${{ env.TARGET_PROFILE }}_${{ env.Compile_Date }}
         path: ${GITHUB_WORKSPACE}/config.txt
