--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -107,6 +107,8 @@ jobs:
         
     - name: 读取发布信息
       run: |
+        mkdir -p Github_Tags
+        cd Github_Tags
         wget -q --no-cookie --no-check-certificate https://api.github.com/repos/${{github.repository}}/releases/tags/AutoUpdate -O Github_Tags
         
     - name: 发布定时更新信息
@@ -117,7 +119,7 @@ jobs:
       with:
         name: update_Firmware
         tag_name: AutoUpdate
-        files: Github_Tags
+        files: Github_Tags/*
 
     - name: 下载"${{matrix.target}}"源码
       working-directory: /workdir
