--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -86,6 +86,22 @@ jobs:
         else
           source build/common/common.sh && Diy_tongzhi
         fi
+        
+    - name: 读取发布信息
+      run: |
+        mkdir -p Github_Tags
+        cd Github_Tags
+        wget -q --no-cookie --no-check-certificate https://api.github.com/repos/${{github.repository}}/releases/tags/AutoUpdate -O Github_Tags
+        
+    - name: 发布固件
+      uses: ncipollo/release-action@v1
+      if: env.UPLOAD_RELEASE == 'true'
+      with:
+        name: update_Firmware
+        tag: AutoUpdate
+        token: ${{ secrets.REPO_TOKEN }}
+        artifacts: "Github_Tags/*"
+
 
     - name: 电报机器人信息通知
       if: env.SERVERCHAN_SCKEY == 'true'
@@ -104,22 +120,6 @@ jobs:
         sudo timedatectl set-timezone "$TZ"
         sudo mkdir -p /workdir
         sudo chown $USER:$GROUPS /workdir
-        
-    - name: 读取发布信息
-      run: |
-        mkdir -p Github_Tags
-        cd Github_Tags
-        wget -q --no-cookie --no-check-certificate https://api.github.com/repos/${{github.repository}}/releases/tags/AutoUpdate -O Github_Tags
-        
-    - name: 发布定时更新信息
-      uses: softprops/action-gh-release@v1
-      if: env.REGULAR_UPDATE == 'true'
-      env:
-        GITHUB_TOKEN: ${{ secrets.REPO_TOKEN }}
-      with:
-        name: update_Firmware
-        tag_name: AutoUpdate
-        files: Github_Tags/*
 
     - name: 下载"${{matrix.target}}"源码
       working-directory: /workdir
