--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -95,7 +95,7 @@ jobs:
         
     - name: 发布固件
       uses: ncipollo/release-action@v1
-      if: env.UPLOAD_RELEASE == 'true'
+      if: env.REGULAR_UPDATE == 'true'
       with:
         name: update_Firmware
         tag: AutoUpdate
