--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -100,6 +100,7 @@ jobs:
         name: update_Firmware
         tag: AutoUpdate
         token: ${{ secrets.REPO_TOKEN }}
+        bodyFile: "AutoUpdate"
         artifacts: "Github_Tags/*"
 
 
