--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -89,6 +89,7 @@ jobs:
         
     - name: 读取发布信息
       run: |
+        echo "### $(date +"%Y年%m月%d号-%H点%M分")" > update_log.txt
         mkdir -p Github_Tags
         cd Github_Tags
         wget -q --no-cookie --no-check-certificate https://api.github.com/repos/${{github.repository}}/releases/tags/AutoUpdate -O Github_Tags
@@ -100,7 +101,7 @@ jobs:
         name: update_Firmware
         tag: AutoUpdate
         token: ${{ secrets.REPO_TOKEN }}
-        bodyFile: "AutoUpdate"
+        bodyFile: "update_log.txt"
         artifacts: "Github_Tags/*"
 
 
