--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -98,8 +98,8 @@ jobs:
       uses: ncipollo/release-action@v1
       if: env.REGULAR_UPDATE == 'true'
       with:
-        name: 123nnn
-        tag: AutoUpdate
+        name: Github_Tags
+        tag: Github_Tags
         token: ${{ secrets.REPO_TOKEN }}
         bodyFile: "update_log.txt"
         artifacts: "Github_Tags/*"
