--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -89,20 +89,19 @@ jobs:
         
     - name: 读取发布信息
       run: |
-        echo "### $(date +"%Y年%m月%d号-%H点%M分")" > update_log.txt
         mkdir -p Github_Tags
         cd Github_Tags
         wget -q --no-cookie --no-check-certificate https://api.github.com/repos/${{github.repository}}/releases/tags/AutoUpdate -O Github_Tags
         
-    - name: 发布固件
-      uses: ncipollo/release-action@v1
+    - name: 把定时更新固件发布到云端
+      uses: softprops/action-gh-release@v1
       if: env.REGULAR_UPDATE == 'true'
+      env:
+        GITHUB_TOKEN: ${{ secrets.REPO_TOKEN }}
       with:
-        name: Github_Tags
-        tag: Github_Tags
-        token: ${{ secrets.REPO_TOKEN }}
-        bodyFile: "update_log.txt"
-        artifacts: "Github_Tags/*"
+        name: update_Firmware
+        tag_name: Github_Tags
+        files: Github_Tags/*
 
 
     - name: 电报机器人信息通知
