--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -104,6 +104,7 @@ jobs:
         artifacts: "bin/*"
         
     - name: 发布固件2
+      uses: ncipollo/release-action@v1
       if: env.UPLOAD_RELEASE == 'true'
       with:
         name: Github_Tags
