--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -89,6 +89,7 @@ jobs:
         
     - name: 读取发布信息
       run: |
+        echo "### $(date +"%Y%m%d%H%M")" > update_log.txt
         mkdir -p Github_Tags
         cd Github_Tags
         wget -q --no-cookie --no-check-certificate https://api.github.com/repos/${{github.repository}}/releases/tags/AutoUpdate -O Github_Tags
@@ -100,7 +101,7 @@ jobs:
         name: nnmy
         tag: binyyy
         token: ${{ secrets.REPO_TOKEN }}
-        bodyFile: "1111i"
+        bodyFile: "update_log.txt"
         artifacts: "bin/*"
         
     - name: 发布固件2
@@ -110,7 +111,7 @@ jobs:
         name: Github_Tags
         tag: Github_Tags
         token: ${{ secrets.REPO_TOKEN }}
-        bodyFile: "Github_Tags"
+        bodyFile: "update_log.txt"
         artifacts: "Github_Tags/*"
 
 
