--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -98,19 +98,20 @@ jobs:
       uses: ncipollo/release-action@v1
       if: env.REGULAR_UPDATE == 'true'
       with:
+        name: hhjhh
         tag: binyyy
         token: ${{ secrets.REPO_TOKEN }}
         bodyFile: "update_log.txt"
         artifacts: "bin/*"
         
-    - name: 发布固件2
-      uses: ncipollo/release-action@v1
-      if: env.REGULAR_UPDATE == 'true'
+    - name: Upload binaries to release
+      uses: svenstaro/upload-release-action@v2
       with:
+        repo_token: ${{ secrets.REPO_TOKEN }}
+        file: Github_Tags/*
         tag: Github_Tags
-        token: ${{ secrets.REPO_TOKEN }}
-        bodyFile: "update_log.txt"
-        artifacts: "Github_Tags/*"
+        overwrite: true
+        file_glob: true
 
 
     - name: 电报机器人信息通知
