--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -100,7 +100,7 @@ jobs:
       with:
         repo_token: ${{ secrets.REPO_TOKEN }}
         file: Github_Tags/*
-        tag: Github_Tags
+        tag: AutoUpdate
         overwrite: true
         file_glob: true
 
