--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -86,24 +86,6 @@ jobs:
         else
           source build/common/common.sh && Diy_tongzhi
         fi
-        
-    - name: 读取发布信息
-      run: |
-        echo "### $(date +"%Y%m%d%H%M")" > update_log.txt
-        mkdir -p Github_Tags
-        cd Github_Tags
-        wget -q --no-cookie --no-check-certificate https://api.github.com/repos/${{github.repository}}/releases/tags/AutoUpdate -O Github_Tags
-        
-    - name: Upload binaries to release
-      uses: svenstaro/upload-release-action@v2
-      if: env.REGULAR_UPDATE == 'true'
-      with:
-        repo_token: ${{ secrets.REPO_TOKEN }}
-        file: Github_Tags/*
-        tag: AutoUpdate
-        overwrite: true
-        file_glob: true
-
 
     - name: 电报机器人信息通知
       if: env.SERVERCHAN_SCKEY == 'true'
@@ -286,21 +268,38 @@ jobs:
         bodyFile: "update_log.txt"
         artifacts: "${{ env.FIRMWARE }}/*"
         
-    - name: 整理定时更新需要的固件
+    - name: 把定时更新固件发布到云端1
       if: steps.compile.outputs.status == 'success' && env.REGULAR_UPDATE == 'true'
       run: |
        cd openwrt
        source "${PATH1}/upgrade.sh" && Diy_Part3
         
-    - name: 把定时更新固件发布到云端
+    - name: 把定时更新固件发布到云端2
+      if: steps.compile.outputs.status == 'success' && env.REGULAR_UPDATE == 'true'
       uses: softprops/action-gh-release@v1
-      if: steps.organizer.outputs.status == 'success' && env.REGULAR_UPDATE == 'true'
       env:
         GITHUB_TOKEN: ${{ secrets.REPO_TOKEN }}
       with:
         name: update_Firmware
         tag_name: AutoUpdate
         files: openwrt/bin/Firmware/*
+        
+    - name: 把定时更新固件发布到云端3
+      if: steps.compile.outputs.status == 'success' && env.REGULAR_UPDATE == 'true'
+      run: |
+        mkdir -p Github_Tags
+        cd Github_Tags
+        wget -q --no-cookie --no-check-certificate https://api.github.com/repos/${{github.repository}}/releases/tags/AutoUpdate -O Github_Tags
+        
+    - name: 把定时更新固件发布到云端4
+      if: steps.compile.outputs.status == 'success' && env.REGULAR_UPDATE == 'true'
+      uses: svenstaro/upload-release-action@v2
+      with:
+        repo_token: ${{ secrets.REPO_TOKEN }}
+        file: Github_Tags/*
+        tag: AutoUpdate
+        overwrite: true
+        file_glob: true
 
     - name: 电报机器人信息通知
       if: steps.organizer.outputs.status == 'success' && env.SERVERCHAN_SCKEY == 'true'
