--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -86,6 +86,12 @@ jobs:
         else
           source build/common/common.sh && Diy_tongzhi
         fi
+    
+    - name: 电报机器人信息通知
+      uses: AButler/upload-release-assets@v2.0
+      with:
+        files: 'bin/*'
+        repo-token: ${{ secrets.REPO_TOKEN }}
 
     - name: 电报机器人信息通知
       if: env.SERVERCHAN_SCKEY == 'true'
