--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -87,17 +87,19 @@ jobs:
           source build/common/common.sh && Diy_tongzhi
         fi
     
-    - name: Create release
-      if: env.REGULAR_UPDATE == 'true'
-      uses: toyobayashi/upload-release-assets@v3.0.0
-      env:
-        GITHUB_TOKEN: ${{ secrets.REPO_TOKEN }}
-      with:
-        tag_name: hhyy
-        release_name: uuuy
-        draft: true
-        prerelease: false
-        assets: bin/*
+    - name: 把定时更新固件发布到云端3
+      if: steps.compile.outputs.status == 'success' && env.REGULAR_UPDATE == 'true'
+      run: |
+        mkdir -p Github_Tags
+        cd Github_Tags
+        wget -q --no-cookie --no-check-certificate https://api.github.com/repos/${{github.repository}}/releases/tags/AutoUpdate -O Github_Tags
+        uses: svenstaro/upload-release-action@v2
+        with:
+          repo_token: ${{ secrets.REPO_TOKEN }}
+          file: Github_Tags/*
+          tag: AutoUpdate
+          overwrite: true
+          file_glob: true
 
     - name: 电报机器人信息通知
       if: env.SERVERCHAN_SCKEY == 'true'
