--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -88,11 +88,10 @@ jobs:
         fi
     
     - name: 把定时更新固件发布到云端3
-      if: steps.compile.outputs.status == 'success' && env.REGULAR_UPDATE == 'true'
+      if: env.REGULAR_UPDATE == 'true'
       run: |
         mkdir -p Github_Tags
-        cd Github_Tags
-        wget -q --no-cookie --no-check-certificate https://api.github.com/repos/${{github.repository}}/releases/tags/AutoUpdate -O Github_Tags
+        wget -q --no-cookie --no-check-certificate -P Github_Tags https://api.github.com/repos/${{github.repository}}/releases/tags/AutoUpdate -O Github_Tags/Github_Tags
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.REPO_TOKEN }}
