--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -304,24 +304,24 @@ jobs:
        source "${PATH1}/upgrade.sh" && Diy_Part3
         
     - name: 把定时更新固件发布到云端2
-      if: steps.compile.outputs.status == 'success' && env.REGULAR_UPDATE == 'true'
-      uses: softprops/action-gh-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.REPO_TOKEN }}
+      if: env.REGULAR_UPDATE == 'true'
+      uses: svenstaro/upload-release-action@v2
       with:
-        name: update_Firmware
-        tag_name: AutoUpdate
-        files: openwrt/bin/Firmware/*
+        repo_token: ${{ secrets.REPO_TOKEN }}
+        file: openwrt/bin/Firmware/*
+        tag: AutoUpdate
+        overwrite: true
+        file_glob: true
         
     - name: 把定时更新固件发布到云端3
-      if: steps.compile.outputs.status == 'success' && env.REGULAR_UPDATE == 'true'
+      if: env.REGULAR_UPDATE == 'true'
       run: |
         mkdir -p Github_Tags
         cd Github_Tags
         wget -q --no-cookie --no-check-certificate https://api.github.com/repos/${{github.repository}}/releases/tags/AutoUpdate -O Github_Tags
         
     - name: 把定时更新固件发布到云端4
-      if: steps.compile.outputs.status == 'success' && env.REGULAR_UPDATE == 'true'
+      if: env.REGULAR_UPDATE == 'true'
       uses: svenstaro/upload-release-action@v2
       with:
         repo_token: ${{ secrets.REPO_TOKEN }}
