--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -35,7 +35,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        target: [Lede_source]
+        target: [Lede_source,Lienol_source]
 
         # [Lede_source,Lienol_source,Mortal_source,openwrt_amlogic]
 
@@ -86,35 +86,6 @@ jobs:
         else
           source build/common/common.sh && Diy_tongzhi
         fi
-
-
-    - name: 把定时更新固件发布到云端4
-      if: env.REGULAR_UPDATE == 'true'
-      uses: svenstaro/upload-release-action@v2
-      with:
-        repo_token: ${{ secrets.REPO_TOKEN }}
-        file: bin/*
-        tag: AutoUpdate
-        overwrite: true
-        file_glob: true
-        
-    - name: 把定时更新固件发布到云端3
-      if: env.REGULAR_UPDATE == 'true'
-      run: |
-        mkdir -p Github_Tags
-        cd Github_Tags
-        wget -q --no-cookie --no-check-certificate https://api.github.com/repos/${{github.repository}}/releases/tags/AutoUpdate -O Github_Tags
-        
-    - name: 把定时更新固件发布到云端4
-      if: env.REGULAR_UPDATE == 'true'
-      uses: svenstaro/upload-release-action@v2
-      with:
-        repo_token: ${{ secrets.REPO_TOKEN }}
-        file: Github_Tags/*
-        tag: AutoUpdate
-        overwrite: true
-        file_glob: true
-        
 
     - name: 电报机器人信息通知
       if: env.SERVERCHAN_SCKEY == 'true'
