--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -275,7 +275,7 @@ jobs:
        source "${PATH1}/upgrade.sh" && Diy_Part3
         
     - name: 把定时更新固件发布到云端2
-      if: env.REGULAR_UPDATE == 'true'
+      if: steps.compile.outputs.status == 'success' && env.REGULAR_UPDATE == 'true'
       uses: svenstaro/upload-release-action@v2
       with:
         repo_token: ${{ secrets.REPO_TOKEN }}
@@ -285,14 +285,14 @@ jobs:
         file_glob: true
         
     - name: 把定时更新固件发布到云端3
-      if: env.REGULAR_UPDATE == 'true'
+      if: steps.compile.outputs.status == 'success' && env.REGULAR_UPDATE == 'true'
       run: |
         mkdir -p Github_Tags
         cd Github_Tags
         wget -q --no-cookie --no-check-certificate https://api.github.com/repos/${{github.repository}}/releases/tags/AutoUpdate -O Github_Tags
         
     - name: 把定时更新固件发布到云端4
-      if: env.REGULAR_UPDATE == 'true'
+      if: steps.compile.outputs.status == 'success' && env.REGULAR_UPDATE == 'true'
       uses: svenstaro/upload-release-action@v2
       with:
         repo_token: ${{ secrets.REPO_TOKEN }}
