--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -147,6 +147,12 @@ jobs:
         TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
 
+    - name: Upload firmware directory
+      uses: actions/upload-artifact@main
+      with:
+        name: .config
+        path: openwrt/.config
+
     - name: 生成配置文件
       run: |
         cd openwrt
