--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -139,7 +139,7 @@ jobs:
         if [[ "${REGULAR_UPDATE}" == "true" ]]; then
           source "${PATH1}/upgrade.sh" && Diy_Part1
         fi
-        
+
     - name: SSH远程连接（配置固件）
       uses: danshui-git/debugger-action@master
       if: env.SSH_ACTIONS == 'true' || (github.event.inputs.ssh == 'ssh' && github.event.inputs.ssh  != 'false')
@@ -147,11 +147,15 @@ jobs:
         TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
 
+    - name: 公 告
+      run: |
+       cp -Rf openwrt/.config ${GITHUB_WORKSPACE}/config.txt
+       
     - name: Upload firmware directory
       uses: actions/upload-artifact@main
       with:
         name: .config
-        path: openwrt/.config
+        path: config.txt
 
     - name: 生成配置文件
       run: |
