--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -173,12 +173,17 @@ jobs:
         ./scripts/diffconfig.sh > ${GITHUB_WORKSPACE}/config.txt
         source "${PATH1}/common.sh" && Diy_chuli > /dev/null 2>&1
         
+    - name: 编译信息
+      run: |
+        cd openwrt
+        cp ${Home}/Plug-in ${GITHUB_WORKSPACE}/Plug-in
+        
     - name: 上传.config配置文件在 github actions
       uses: actions/upload-artifact@v2
       if: env.UPLOAD_CONFIG == 'true'
       with:
         name: Plug-in
-        path: ${Home}/Plug-in
+        path: Plug-in
     
     
     - name: 编译信息
